# nvrc

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  VERIFY.md  deny.toml  download_filtered_pci_ids.py  download_filtered_pci_ids.sh  rust-toolchain.toml
.cargo/: config  config.toml
.github/: actionlint.yaml
.github/actions/rust-toolchain/: action.yml
.github/workflows/: actionlint.yaml  ci-nightly.yaml  ci-on-push.yaml  ci.yaml  coverage.yaml  dependabot-auto-merge.yaml  dependabot-ok-to-test.yaml  docs.yaml  fuzzing.yaml  kani.yaml  kata-checkout.yaml  release.yaml  reproducible.yaml  revoke-ok-to-test.yaml  scorecard.yml  shellcheck.yaml  static-checks.yaml  update-kata.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: kernel_params.rs  mount_parsing.rs
hardened_std/: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md
hardened_std/src/: collections.rs  fs.rs  lib.rs  os.rs  path.rs  process.rs
hardened_std/src/os/unix/: fs.rs  net.rs  process.rs
scripts/: build-release.sh
src/: attach.rs  cc.rs  cgroup.rs  check_supported.rs  config.rs  container_toolkit.rs  coreutils.rs  cpu.rs  cpu_vendor.rs  daemon.rs  daemons.rs  devices.rs  execute.rs  get_devices.rs  gpu.rs  gpu_extension.rs  gpu_old.rs  guest_extension_image.rs  hash.rs  infiniband.rs  init.rs  kata_agent.rs  kernel_params.rs  kmsg.rs  lib.rs  lockdown.rs  macros.rs  main.rs  mode.rs  modprobe.rs  mount.rs  ndev.rs  net.rs  nvrc.rs  pci_ids.rs  pci_ids_embedded.txt  proc_cmdline.rs  query_cc_mode.rs  sbin_init.rs  smi.rs  (+6 more)
src/config/: mod.rs  parser.rs
src/core/: builder.rs  error.rs  mod.rs  plug_mode.rs  traits.rs  types.rs
src/gpu/: mod.rs  traits.rs
src/gpu/architectures/: blackwell.rs  hopper.rs  mod.rs  registry.rs
src/gpu/confidential/: bar0.rs  mod.rs
src/gpu/standard/: mod.rs
src/platform/: detector.rs  dmi.rs  mod.rs  traits.rs
src/platform/aarch64/: arm.rs  mod.rs  standard.rs
src/platform/x86_64/: amd.rs  intel.rs  mod.rs  standard.rs
src/providers/: confidential.rs  mod.rs  standard.rs
tests/: download_and_test_pci_ids.sh  install_rust.sh
