[package]
name = "NVRC"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
nix = { version =  "0.30.1", features = ["fs", "mount", "user", "process", "reboot", "signal", "mman", "poll", "ioctl"] }
cfg-if = "1.0.4"
log = "0.4.29"
kernlog = "0.3"
rlimit = "0.10.2"
libc = "0.2.178"
once_cell = "1.21.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = 'abort'

[dev-dependencies]
mktemp = "0.5.1"
tempfile = "3.23.0"
serial_test = "3.2.0"

[features]
confidential = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
