[package]
name = "NVRC"
version = "0.1.4"
edition = "2021"

[dependencies]
nix = { version =  "0.31.3", features = ["fs", "mount", "user", "process", "reboot", "signal", "mman", "poll", "ioctl"] }
cfg-if = "1.0.4"
log = "0.4.29"
kernlog = "0.3"
rlimit = "0.10.2"
libc = "0.2.178"
once_cell = "1.21.3"
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = "z" # PID 1 runs once per boot: size beats speed
lto = true
codegen-units = 1 # one unit gives fat LTO full visibility and a smaller binary
strip = true
panic = 'abort'

[dev-dependencies]
mktemp = "0.5.1"
tempfile = "3.23.0"
serial_test = "3.2.0"

[features]
confidential = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
