[package]
name = "hardened_std"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
libc = { version = "0.2", default-features = false }

[features]
# Enable std support for safe Stdio conversion
# This is automatically enabled when building NVRC binary
std-support = []

[lib]
name = "hardened_std"
path = "src/lib.rs"
